# bas

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.shared-netns.yml  docker-compose.yml  install.sh  requirements_sionna.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
analyzer/: pyproject.toml
analyzer/src/analyzer/: __init__.py  compare.py  compare_main.py  load.py  main.py  metrics.py  report.py
configs/missions/: simple_route.yaml
configs/network_profiles/: lora_narrowband.yaml  lora_serial.yaml  sionna_urban.yaml  wifi_good.yaml
configs/scenarios/: baseline_wifi.yaml  (+1 more)
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEMOS.md  GLOSSARY.md  INSTALL.md  LIMITATIONS.md  MODULE_MAP.md  QUICKSTART.md  SCENARIOS.md  STAGES.md  TROUBLESHOOTING.md  analytical_review_tools.md  architecture.md  roadmap.md  stage_1_5_1_known_issues.md  stage_1_5_2_plan.md  stage_1_7_lora_serial_plan.md  stage_1_8_mavros_plan.md  stage_2_1_sionna_plan.md  stage_2_2_airsim_overlay.md  stage_2_4_manual_gcs.md  stage_2_4_qgc_setup.md  stage_3_cv_detector.md  stage_3_issgr_api.md  stage_3_issgr_onboard.md  stage_3_issgr_sync.md  stage_3_urban_scene.md  stage_4_admin_web_interface.md  stage_4_airsim_scene_map.md  stage_4_arducopter_airsim_interface.md  stage_4_cyber_attacks.md  stage_4_large_map.md  stage_4_mavlink_sim_router.md  stage_4_osm_scenario_import.md  stage_4_parallel_compute.md  stage_camera_regression.md  tz_compliance.md  ui_guide.md
orchestrator/: pyproject.toml
orchestrator/src/orchestrator/: __init__.py  components.py  config.py  logger.py  main.py  mavros_bridge.py  parallel.py  real_components.py  run.py
orchestrator/src/orchestrator/issgr/: __init__.py  api.py  classifier.py  large_map.py  models.py  onboard.py  repository.py  serializers.py  sync.py
radio_maps/: iris_runway.npz
scene/: iris_runway.xml
scripts/: README.md  _admin_web_integration_smoke.py  _admin_web_smoke.py  _airsim_scene_smoke.py  _arducopter_airsim_smoke.py  _baseline_sitl_arm_smoke.py  _check_cuda_path.sh  _check_flight.py  _ci_preflight.sh  _cyber_smoke.py  _dbl_pcap.sh  _inspect_last_run.sh  _install_nvidia_gl.sh  _large_map_smoke.py  _mavlink_sim_router_smoke.py  _mavlink_smoke.py  _mjpeg_static_server.py  _multirotor_dynamics_smoke.py  _onboard_db_smoke.py  _optix_copy_admin.ps1  _osm_import_smoke.py  _parallel_smoke.py  _real_sitl_e2e_smoke.py  _render_heatmap.py  _run_scenes_smoke.sh  _run_with_sitl_log.sh  _shoot.py  _shoot_jobs.json  _show_arm_state.py  _show_last_stage151.sh  _show_mission_15.sh  _show_phases.py  _sionna_cuda_minimal.py  _sionna_polarized_test.py  _sionna_scenes_smoke.py  _smoke_radio.sh  _start_build.sh  _sync_loopback_smoke.py  _sync_stats_smoke.py  _terrain_smoke.py  (+84 more)
video/: fpv_mjpeg.sh  receiver.py  sender.py
(+59 files in other folders)
