[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bas-analyzer"
version = "0.1.0"
description = "Анализатор журналов прогонов: PDR, throughput, delay, jitter, отчёт"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bas-analyzer = "analyzer.main:main"

[tool.setuptools.packages.find]
where = ["src"]
