[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bas-orchestrator"
version = "0.1.0"
description = "Сценарный оркестратор первого прототипа среды моделирования БАС"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "pymavlink>=2.4",
]

[project.scripts]
bas-orchestrator = "orchestrator.main:main"

[tool.setuptools.packages.find]
where = ["src"]
