[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bas-orchestrator"
version = "0.1.0"
description = "Сценарный оркестратор первого прототипа среды моделирования БАС"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "pymavlink>=2.4",
  # pyserial — для serial endpoint'а (1.7 LoRa PTY: serial:/tmp/ptyGCS_lora:57600).
  # pymavlink требует pyserial только когда device path = UART/PTY, поэтому
  # отдельная зависимость. Без неё mavutil.mavlink_connection падает с
  # ModuleNotFoundError("No module named 'serial'").
  "pyserial>=3.5",
]

[project.scripts]
bas-orchestrator = "orchestrator.main:main"

[tool.setuptools.packages.find]
where = ["src"]
