[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bas-orchestrator"
version = "0.1.0"
description = "Сценарный оркестратор первого прототипа среды моделирования БАС"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "pymavlink>=2.4",
  # ИССГР модели (orchestrator.issgr.models) построены на Pydantic v2.
  "pydantic>=2.0",
  # pyserial — для serial endpoint'а (1.7 LoRa PTY: serial:/tmp/ptyGCS_lora:57600).
  # pymavlink требует pyserial только когда device path = UART/PTY, поэтому
  # отдельная зависимость. Без неё mavutil.mavlink_connection падает с
  # ModuleNotFoundError("No module named 'serial'").
  "pyserial>=3.5",
]

[project.optional-dependencies]
# Геодезия large-map: pyproj (PROJ) — индустриальный стандарт WGS84↔UTM.
# Опционально: large_map.py имеет pure-python Snyder fallback (UTM_BACKEND),
# поэтому минимальный CI без C-extension PROJ всё равно работает. Для
# production-точности на любой дистанции — `pip install bas-orchestrator[geo]`.
geo = ["pyproj>=3.6"]

[project.scripts]
bas-orchestrator = "orchestrator.main:main"

[tool.setuptools.packages.find]
where = ["src"]
